addedComponents for ui

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <a class="navbar-brand" href="#">Title</a>
+    <a class="navbar-brand" href="#">AIRBUS AEROTHON 2.0</a>
     <ul class="navbar-nav mt-lg-0 ml-auto">
       <div *ngIf="authService.isAuthenticated()" ><li class="nav-item-active"><a href="/add-post" class="nav-link">Add Post</a></li></div>
       <li class="nav-item active"><a href="/login" class="nav-link">Login</a></li>
