--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -67,7 +67,9 @@
          <hr>
           <input type="date" name="Select Date">
 <hr>
-<button type="button" class="btn btn-primary">Submit</button>
+<nav>
+  <a routerLink="/list-Of-Flights" routerLinkActive="active"> Submit</a>
+</nav>
               
           
           </div>
