--- a/src/app/booking-details/booking-details.component.html
+++ b/src/app/booking-details/booking-details.component.html
@@ -1,4 +1,5 @@
-<h1>List of Flights</h1>
+<h1>Booked Flight</h1>
+
 <table class="table">
         <thead class="thead-dark">
           <tr>
@@ -11,22 +12,13 @@
                 <th scope="col">Layover Time</th>
                 <th scope="col">Price</th>
                 <th scope="col">TimeOfTravel</th>
-                <th scope="col">
-                    <a routerLink="/bookedFlight" routerLinkActive="active"> Book</a>
-                  </th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <th scope="row">1</th>
             
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            
-          </tr>
-          <tr>
-            <th scope="row">3</th>
+          
             
           </tr>
         </tbody>
